<resources>
    <string name="app_name">SuperResolution</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_email">手机号码</string>
    <string name="prompt_code">验证码</string>
    <string name="action_send">发送短信</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_to_register">立即注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">邮箱地址错误，请重新输入</string>
    <string name="error_invalid_password">密码太短，请重新输入</string>
    <string name="error_incorrect_password">密码有误，请重新输入</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">我的</string>
    <string name="title_upload">上传</string>
    <string name="select_from_album">相册上传</string>
    <string name="take_photo">拍照上传</string>
    <string name="save_picture">保存图片</string>
    <string name="item_history">历史记录</string>
    <string name="item_vip">会员中心</string>
    <string name="item_wallet">我的钱包</string>
    <string name="item_settings">设置</string>
    <string name="item_service">反馈</string>
    <string name="item_logout">退出登录</string>
    <string name="my_history">我的历史</string>
    <string name="vip">会员中心</string>
    <string name="get_vip">立即开通VIP</string>
    <string name="renew_vip">续费会员</string>
    <string name="result_title">Just a sec</string>

    <string name="demo_info_text">Warning: \n\nFor demonstration purpose, the assembling and signing of the request parameters are done on the client side.\nHowever, in practice, both assembling and signing MUST BE carried out on the server side.</string>
    <string name="pay_with_alipay">Pay with Alipay</string>
    <string name="pay_with_alipay_hk">Pay with AlipayHK</string>
    <string name="auth_with_alipay">Authenticate with Alipay</string>
    <string name="web_to_native">Call Alipay from Web Content</string>
    <string name="check_sdk_version">Alipay SDK Version</string>
    <string name="pay_success">Payment success:</string>
    <string name="auth_failed">Authentication failed:</string>
    <string name="error_missing_appid_rsa_private">Error: Missing \"APPID\" or \"RSA_PRIVATE\" in PayDemoActivity.</string>
    <string name="error_missing_hk_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_HK.</string>
    <string name="pay_result">Payment result:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">Error: Missing \"PARTNER\", \"APP_ID\", \"RSA_PRIVATE\", or \"TARGET_ID\" in PayDemoActivity.</string>
    <string name="confirm">Confirm</string>
    <string name="pay_failed">Payment failed:</string>
    <string name="auth_success">Authentication success:</string>
    <string name="alipay_sdk_version_is">"Alipay SDK version: "</string>
    <string name="error_missing_h5_pay_url">Missing URL to load. Please configure in PayDemoActivity.h5Pay()</string>
    <string name="error">Error</string>
    <string name="pay_cross_border">Cross-border Pay with Alipay</string>
    <string name="error_missing_global_partner_seller_rsa_private" >Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_Global.</string>
    <string name="payment_inst_hk">Payer: HK</string>
    <string name="payment_inst_cn">Payer: CN</string>
</resources>
