<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/mmg1" android:checkableBehavior="single">
        <item
            android:id="@+id/history"
            android:icon="@drawable/history"
            android:title="@string/item_history"/>

        <item
            android:id="@+id/vip"
            android:icon="@drawable/vip"
            android:title="@string/item_vip"/>

        <item
            android:id="@+id/wallet"
            android:icon="@drawable/wallet"
            android:title="@string/item_wallet"/>
    </group>

    <group android:id="@+id/mmg2" android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/item_settings"/>

        <item
            android:id="@+id/service"
            android:icon="@drawable/service"
            android:title="@string/item_service"/>
    </group>

<!--    <group android:id="@+id/mmg3" android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/logout"-->
<!--            android:title="@string/item_logout"/>-->

<!--    </group>-->

</menu>